[gd_scene load_steps=2 format=2]

[ext_resource path="res://tela inicial.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 57.0
margin_top = 62.0
margin_right = 157.0
margin_bottom = 105.0
text = "Clique aqui"

[node name="Label" type="Label" parent="."]
margin_left = 48.0
margin_top = 15.0
margin_right = 166.0
margin_bottom = 80.0
text = "1) Clique para ver
a lista carregada:

"

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 180.0
margin_top = 30.0
margin_right = 298.0
margin_bottom = 84.0

[node name="lista" type="RichTextLabel" parent="ColorRect2"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -1.0
margin_top = 1.0
margin_right = 117.0
margin_bottom = 55.0

[node name="Button2" type="Button" parent="."]
margin_left = 82.0
margin_top = 278.0
margin_right = 244.0
margin_bottom = 327.0
text = "Clique aqui"

[node name="dados" type="LineEdit" parent="."]
margin_left = 79.0
margin_top = 204.0
margin_right = 246.0
margin_bottom = 268.0

[node name="Label2" type="Label" parent="."]
margin_left = 60.0
margin_top = 156.0
margin_right = 346.0
margin_bottom = 175.0
text = "2) Insira seus dados e clique para renderizar:"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 80.0
margin_top = 339.0
margin_right = 245.0
margin_bottom = 406.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 12.0
margin_top = 4.0
margin_right = 152.0
margin_bottom = 64.0

[node name="Button3" type="Button" parent="."]
margin_left = 608.0
margin_top = 88.0
margin_right = 761.0
margin_bottom = 128.0
text = "Clique aqui"

[node name="Label3" type="Label" parent="."]
margin_left = 571.0
margin_top = 27.0
margin_right = 839.0
margin_bottom = 75.0
text = "3) Clique no botão pra retornar este texto:"

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 572.0
margin_top = 142.0
margin_right = 809.0
margin_bottom = 184.0

[node name="texto" type="RichTextLabel" parent="ColorRect3"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 1.0
margin_top = -1.0
margin_right = 234.0
margin_bottom = 42.0

[node name="Button4" type="Button" parent="."]
margin_left = 632.0
margin_top = 355.0
margin_right = 762.0
margin_bottom = 399.0
text = "Clique aqui"

[node name="Label4" type="Label" parent="."]
margin_left = 580.0
margin_top = 289.0
margin_right = 824.0
margin_bottom = 333.0
text = "4) Insira um valor e clique no botão:"

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 618.0
margin_top = 412.0
margin_right = 786.0
margin_bottom = 442.0

[node name="value" type="RichTextLabel" parent="ColorRect4"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 3.0
margin_top = 1.0
margin_right = 87.0
margin_bottom = 27.0

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 669.0
margin_top = 315.0
margin_right = 727.0
margin_bottom = 339.0

[node name="Label5" type="Label" parent="."]
margin_left = 585.0
margin_top = 54.0
margin_right = 828.0
margin_bottom = 86.0
text = "Bom dia André, como o senhor está?"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
